New version with scores
